name:                pipes-conduit
version:             0.1.0.0
synopsis:            Conversions between pipes and conduit

homepage:            https://github.com/DanBurton/pipes-conduit#readme
license:             BSD3
license-file:        LICENSE
author:              Dan Burton
maintainer:          danburton.email@gmail.com

category:            Pipes
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Conduit.Proxy, Control.Proxy.Conduit
  other-modules:       Data.PipesConduit
  build-depends:       base ==4.6.*, pipes ==3.3.*, conduit ==1.0.*, pipes-safe, pipes-parse, transformers
